Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-4296

[Plasma] Starting Plasma store with use_one_memory_mapped_file enabled crashes due to improper memory alignment

    XMLWordPrintableJSON

Details

    Description

      Starting Plasma with use_one_memory_mapped_file (-f flag) causes a crash, most likely due to improper memory alignment. This can be resolved by changing the dlmemalign call during initialization to use slightly smaller memory (by ~8KB).

      Attachments

        Activity

          People

            pcmoritz Philipp Moritz
            anuragkh Anurag Khandelwal
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0h
                0h
                Logged:
                Time Spent - 5h 10m
                5h 10m