ARROW-4296: [Plasma] Use one mmap file by default, prevent crash with -f

This PR is similar to https://github.com/apache/arrow/pull/3434 but also makes sure we only have one well-tested code path to go through.

Author: Philipp Moritz <pcmoritz@gmail.com>

Closes #3490 from pcmoritz/one-mmap-file and squashes the following commits:

c447af57 <Philipp Moritz> remove --verbose
f885f499 <Philipp Moritz> reduce plasma store size for test
6072e8fd <Philipp Moritz> add verbose flag
990700f9 <Philipp Moritz> use only one mmapped file